<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/sys_spacing_16dp"
    tools:context=".todolist.group.activity.TodoListGroupAdd">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/todo_list_group_add_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sys_spacing_8dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/todo_list_group_add_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todogroup_add_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/todo_list_group_add_memo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sys_spacing_8dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/todo_list_group_add_memo_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todogroup_add_memo"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/todo_list_group_add_color_image"
            android:layout_width="@dimen/sys_large_icon_size"
            android:layout_height="@dimen/sys_large_icon_size"
            android:src="@drawable/ic_circle_check_24dp"
            android:layout_marginEnd="@dimen/sys_spacing_16dp"
            android:layout_gravity="center_vertical"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/todo_list_group_add_color_layout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sys_spacing_16dp"
            android:layout_marginEnd="@dimen/sys_spacing_8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/todo_list_group_add_color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/todogroup_add_color"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todogroup_add_favorite"
                android:textSize="@dimen/sys_medium_text_size"
                android:layout_gravity="center"/>
            <CheckBox
                android:id="@+id/todo_list_group_add_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/todo_list_group_add_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sys_spacing_8dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/todo_list_group_add_parent_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todogroup_add_parent_name"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>